css/style.css
html {
    height: 100%;
}

body {
    font-size: 14px;
    margin: 0px;
    height: 100%;
}

#search {
    padding: 20px;
    background-color: #77D5D5;
    border: 1px solid gray;
    max-height: 101px;
}

#search-fields {
    display:flex;
    flex-flow: row wrap;
    justify-content: center;
    margin: 5px;
    height: 30px;
}

#search-fields-bar {
    width: 65%;
    padding: 8px 12px;
    font-size: 14px;
    border: 1px solid lightgray;
    border-radius: 3px;
}

#search-fields-delete-button {
    background-color: transparent;
    border-style: none;
    margin-left: -25px;
}

#search-fields-delete-button:hover {
    background-color: #FF6B6B;
}

#search-fields-button {
    width: 10%;
    font-size: 14px;
    margin: 0 0 0 10px;
}

#search-filters {
    display:flex;
    flex-flow: row wrap;
    justify-content: center;
}

#main{
    max-height: 100%;
    background-color: white;
    padding: 0px 0px 80px;
    display:flex;
    flex-flow: row wrap;
}

#list {
    width: 30%;
    overflow-y: auto;
    margin: 0px;
    max-height: 100%;
    padding: 25px;
}

.food-view {
    background-color: #3DCD3D;
    border-radius: 5px;
}

.food-view:nth-child(odd) {
    background-color: #83EA83;
}

.food-view {
    border: 1px solid lightgray;
    list-style-type: none;
    padding: 10px;
    min-height: 60px;
    display: block;
}

.item-descriptions {
    float: left;
    margin-right: 90px;
}


.item-name {
    font-size: 17px;
    font-weight: bold;
    margin: 0px 0px 10px 0px;
}

.brand-name {
    margin: 0px;
}

.nutrition {
    margin-top: 20px;
    margin-left: -90px;
    float: right;
}

.calorie {
    width: 50px;
}

#store {
    width: 65%;
}

#shelve {
    list-style-type: none;
    margin-bottom: 70px;
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
}

.food-store-view {
    margin: 10px;
    padding: 10px;
    width: 150px;
    height: 150px;
    text-align: left;
    border-radius: 5px;
    border: 1px solid lightgray;
    background-color: #FF8F8F;
    position: relative;
}

.remove-btn-wrapper {
    position: absolute;
    bottom: 15px;
    left: 50px;
}

.remove-button {
    font-size: 14px;
}

#total {
    display: table;
    margin: 0px auto;
}

.total-price {
    padding: 15px 25px;
    background-color: #FFAE6B;
    border-radius: 15px;
    border: 3px solid #E97E25;
}

footer {
    position: fixed;
    bottom: 0px;
    height: 40px;
    border: 1px solid lightgray;
    width: 100%;
    background-color: #77D5D5;
    text-align: center;
}

